--- a/src/App.css
+++ b/src/App.css
@@ -29,7 +29,9 @@ html, body {
 
 .navParking {
   border-radius: 10px;
-  box-shadow: 0px 0px 10px rgb(119, 119, 119);
+  box-shadow: 0px 0px 10px rgb(189, 179, 221);
+  padding: 1.2em;
+  margin: 0.5em;
   padding: 20px;
 
 }
