--- a/src/App.css
+++ b/src/App.css
@@ -15,11 +15,22 @@ html, body {
   background-color: black;
 }
 
+.App {
+  min-height: 100vh;
+}
 
 .nav__item {
   list-style: none;
 }
 
+
+.page {
+  height: 100%;
+}
+
+.main {
+  height: 100%;
+}
 .nav__item a {
   display: block;
   margin: 0.4em;
@@ -41,3 +52,23 @@ html, body {
 p {
   margin: 0;
 }
+
+a {
+  color: black;
+}
+
+Link {
+  color: black;
+}
+
+.order {
+  border-radius: 10px;
+  box-shadow: 0px 0px 10px rgb(189, 179, 221);
+  padding: 20px;
+  margin-bottom: 20px;
+}
+
+.tab {
+  padding-left: 20px;
+}
+
