--- a/src/components/Client/TransportStyle.module.css
+++ b/src/components/Client/TransportStyle.module.css
@@ -1,7 +1,7 @@
 .transport__items {
     display: flex;
     flex-direction: row;
-    box-shadow: 0px 0px 10px rgb(189, 189, 189);
+    border: 1px solid #eee;
     border-radius: 20px;
     max-width: 500px;
     padding: 1em;
