--- a/src/components/Employee/EmployeeDetails.module.css
+++ b/src/components/Employee/EmployeeDetails.module.css
@@ -30,7 +30,7 @@
     width: 200px;
     height: 200px;
     border-radius: 50%;
-    background-color: rgb(228, 228, 228);
+    border: 1px solid #eee;
     margin: 0 auto;
     margin-top: 30px;
 }
