--- a/src/components/Home/Home.module.css
+++ b/src/components/Home/Home.module.css
@@ -17,7 +17,7 @@
     flex-direction: row;
     justify-content: space-around;
     background-color: rgb(245, 245, 245);
-    box-shadow: 0px 0px 10px rgb(189, 179, 221);
+    border: 1px solid #eee;
     padding: 20px;
     border-radius: 20px;
 }
@@ -25,7 +25,7 @@
 .card {
     width: 150px;
     border-radius: 20px;
-    box-shadow: 0px 0px 10px rgb(86, 62, 165);
+    border: 1px solid #eee;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -89,7 +89,7 @@
     width: 90%;
     min-height: 200px;
     border-radius: 20px;
-    box-shadow: 0px 0px 10px rgb(189, 179, 221);
+    border: 1px solid #eee;
     margin: 0 auto;
     padding: 0.6em;
 }
@@ -109,7 +109,7 @@
 .notification {
     font-size: 14px;
     padding: 1em;
-    box-shadow: 0px 0px 10px rgb(189, 179, 221);
+    border: 1px solid #eee;
     border-radius: 20px;
     margin-bottom: 0.5em;
 }
