--- a/src/components/Parking/Parking.module.css
+++ b/src/components/Parking/Parking.module.css
@@ -15,7 +15,7 @@
     min-height: 130px;
     background-color: rgb(6, 10, 61);
     border-radius: 20px;
-    box-shadow: 0px 0px 10px rgba(4, 3, 59, 0.425);
+    border: 1px solid #eee;
     margin: 20px;
     color: white;
     font-size: 10px;
@@ -46,7 +46,7 @@
     width: 100px;
     min-height: 130px;
     border-radius: 20px;
-    box-shadow: 0px 0px 10px rgba(4, 3, 59, 0.425);
+    border: 1px solid #eee;
     margin: 20px;
     border: 1px dashed black;
     user-select: none;
